Added working Tekton inline scan with build-scan-push that only pushes if scan is successful

--- a/sample-sysdig-secrets.yaml
+++ b/sample-sysdig-secrets.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: sysdig-secrets
 data:
-  sysdig-secure-api-key: ZDkwNTA1NGItOWY5ZS00NzAxLWEyMTUtNTRiYTMzMTMyMDNl
+  sysdig-secure-api-key: <your_apy_key>
 
