--- a/alpha/tekton-inline-scan-localbuild-alpha.yaml
+++ b/alpha/tekton-inline-scan-localbuild-alpha.yaml
@@ -86,10 +86,14 @@ spec:
         - --oci-layout-path=/workspace/oci
 
     - name: scan
-      image: sysdiglabs/sysdig-inline-scan:latest
+      image: sysdiglabs/secure-inline-scan:2
       args:
-        - -U
+        - --storage-type
+        - oci-dir
+        - --storage-path
         - /workspace/oci
+        - -s
+        - https://secure.sysdig.com
         - $(outputs.resources.builtImage.url)
       env:
         - name: SYSDIG_API_TOKEN
