--- a/beta/tekton-inline-scan-registry-beta.yaml
+++ b/beta/tekton-inline-scan-registry-beta.yaml
@@ -70,10 +70,12 @@ spec:
         - --context=$(params.pathToContext)
 
     - name: scan
-      image: vicenteherrera/sysdig-inline-scan:latest
+      image: sysdiglabs/secure-inline-scan:2
       args:
-        - -l
+        - --registry-auth-file
         - /tekton/creds/.docker/config.json
+        - -s
+        - https://secure.sysdig.com
         - $(resources.outputs.builtImage.url)
       env:
         - name: SYSDIG_API_TOKEN
